styles/board.css
.board {
  display: grid;
  grid-template-columns: repeat(4, minmax(18.75rem, 1fr));
  gap: 2rem;
  overflow-x: scroll;
  scrollbar-width: none;
}

.board::-webkit-scrollbar {
  display: none;
}

.board-column {
  border: var(--BORDER);
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.board-column__title {
  border-bottom: var(--BORDER);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
}

.board-column__title--open {
  color: #ff5964;
}

.board-column__title--in-progress {
  color: #e3b505;
}

.board-column__title--done {
  color: #7bc950;
}

.board-column__tasks {
  padding-inline: 0.5rem;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.board-column__add-task-button {
  border: none;
  border-top: var(--BORDER);
  background: none;
  color: var(--FG-COLOR);
  font-size: 1.25rem;
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
}

.board-column__add-task-button:hover {
  cursor: pointer;
}

.board-task {
  border: var(--BORDER);
  border-radius: 15px;
}

.board-task__name {
  border-bottom: var(--BORDER);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
  font-size: 1.25rem;
  font-weight: 500;
  white-space: nowrap;
}

.board-task__name--due {
  grid-column: 1 / 1;
  grid-row: 2 / 3;
}

.board-task__rows {
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr;
}

.board-task-row {
  display: grid;
  grid-template-columns: subgrid;
  grid-template-rows: subgrid;
  gap: 0.5rem;
  border-bottom: var(--BORDER);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
  justify-content: center;
  align-content: center;
  font-weight: 600;
}

.board-task-row:last-child {
  border-bottom: none;
}

.board-task-row--priority {
  grid-column: 1 / 3;
  grid-row: 1 / 2;
}

.board-task-row--due {
  grid-column: 1 / 3;
  grid-row: 2 / 3;
}

.board-task-row__name {
  color: var(--LIGHT-GRAY-COLOR);
  font-weight: 400;
}

.board-task-row__name--priority {
  grid-column: 1 / 1;
  grid-row: 1 / 2;
}

.board-task-row__data--priority {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}

.board-task__time-left {
  font-style: italic;
}

